--- a/project_kaggle.ipynb
+++ b/project_kaggle.ipynb
@@ -818,16 +818,16 @@
     {
       "cell_type": "code",
       "source": [
-        "pred_model_a_percentage = pred_model_a_proba[:, 1]  # 1. sınıfın olasılığı (winner_model_a)\n",
-        "pred_model_b_percentage = pred_model_b_proba[:, 1]  # 1. sınıfın olasılığı (winner_model_b)\n",
-        "pred_model_tie_percentage = pred_model_tie_proba[:, 1]  # 1. sınıfın olasılığı (winner_tie)\n",
+        "pred_model_a_percentage = pred_model_a_proba[:, 1] ,
+        "pred_model_b_percentage = pred_model_b_proba[:, 1] ,
+        "pred_model_tie_percentage = pred_model_tie_proba[:, 1]  ,
         "\n",
         "total_percentage = pred_model_a_percentage + pred_model_b_percentage + pred_model_tie_percentage\n",
         "pred_model_a_percentage /= total_percentage\n",
         "pred_model_b_percentage /= total_percentage\n",
         "pred_model_tie_percentage /= total_percentage\n",
         "\n",
-        "# Submission dosyasını hazırlama\n",
+      
         "submission_df = pd.DataFrame({\n",
         "    'id': test['id'],\n",
         "    'winner_model_a': pred_model_a_percentage,\n",
@@ -835,7 +835,7 @@
         "    'winner_tie': pred_model_tie_percentage\n",
         "})\n",
         "\n",
-        "# Submission dosyasını kaydetme\n",
+
         "submission_df.to_csv('submission.csv', index=False)"
       ],
       "metadata": {
